Change package name
namespace was reserved

--- a/Nethereum.Contracts.MultiCall2/Nethereum.Contracts.MultiCall2.csproj
+++ b/Nethereum.Contracts.MultiCall2/Nethereum.Contracts.MultiCall2.csproj
@@ -7,6 +7,8 @@
     <Description>Multicall2 tryAggregate() support for Nethereum</Description>
     <PackageProjectUrl>https://github.com/NotCoffee418/Nethereum.Contracts.MultiCall2</PackageProjectUrl>
     <RepositoryUrl>https://github.com/NotCoffee418/Nethereum.Contracts.MultiCall2</RepositoryUrl>
+    <PackageId>NotCoffee418.Nethereum.Contracts.MultiCall2</PackageId>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
