--- a/Nethereum.Contracts.MultiCall2/Nethereum.Contracts.MultiCall2.csproj
+++ b/Nethereum.Contracts.MultiCall2/Nethereum.Contracts.MultiCall2.csproj
@@ -9,6 +9,7 @@
     <RepositoryUrl>https://github.com/NotCoffee418/Nethereum.Contracts.MultiCall2</RepositoryUrl>
     <PackageId>NotCoffee418.Nethereum.Contracts.MultiCall2</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
